Fix header spacing.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,7 +39,7 @@ h2 {
 h3 {
   font-size: 1.25em;
   line-height: 1.2em;
-  margin-top: 1.2em;
+/*margin-top: 1.2em;*/
 }
 
 h4 {
